// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateColorScheme() > returns the correct values 1`] = `
{
  "contrastColors": [
    {
      "background": "#1d1b11",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#131f09",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#3f5041",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#606959",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#85794f",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#838d83",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#859ca8",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#95a8b2",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#a2b3bc",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#afbdc5",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#1f1c13",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#544b34",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#706646",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#867954",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#98895f",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#a89769",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#b5a472",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#c2af7a",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#c7bb92",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#131e0e",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#385332",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#506d52",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#62816b",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#70927e",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#7da090",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#88ad9f",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#95b8ad",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#a3c2b8",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#1e1c10",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#4a4f28",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#586d33",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#678243",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#7a925a",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#8a9f6f",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#99ab81",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#a6b791",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#b3c0a0",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#32130c",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#84311f",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#b0422a",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#c25c33",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#c3783b",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#c38e41",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#c6a04d",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#cdac66",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#d5b87b",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#1a1d0e",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#534c29",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#6f6643",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#817a5c",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#918a70",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#9e9881",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#aaa591",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#b5b19f",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#bfbbac",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#151d1d",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#395325",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#536e39",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#6a8153",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#7c9168",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#8d9e7b",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#9baa8c",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#a8b59a",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#b4bfa8",
        },
      ],
    },
  ],
  "terminal": [
    "#1d1b11",
    "#544b34",
    "#385332",
    "#4a4f28",
    "#84311f",
    "#534c29",
    "#395325",
    "#606959",
    "#3f5041",
    "#a89769",
    "#7da090",
    "#8a9f6f",
    "#c38e41",
    "#9e9881",
    "#8d9e7b",
    "#859ca8",
  ],
}
`;

exports[`generateColorScheme() > returns the correct values 2`] = `
{
  "contrastColors": [
    {
      "background": "#1b1b16",
    },
    {
      "name": "neutral",
      "values": [
        {
          "contrast": 1,
          "name": "neutral100",
          "value": "#26190e",
        },
        {
          "contrast": 2,
          "name": "neutral200",
          "value": "#524b41",
        },
        {
          "contrast": 3,
          "name": "neutral300",
          "value": "#646761",
        },
        {
          "contrast": 4,
          "name": "neutral400",
          "value": "#7b7a6b",
        },
        {
          "contrast": 5,
          "name": "neutral500",
          "value": "#a48377",
        },
        {
          "contrast": 6,
          "name": "neutral600",
          "value": "#c9868b",
        },
        {
          "contrast": 7,
          "name": "neutral700",
          "value": "#d0969a",
        },
        {
          "contrast": 8,
          "name": "neutral800",
          "value": "#d6a4a7",
        },
        {
          "contrast": 9,
          "name": "neutral900",
          "value": "#dcb0b3",
        },
      ],
    },
    {
      "name": "red",
      "values": [
        {
          "contrast": 1,
          "name": "red100",
          "value": "#1a1c14",
        },
        {
          "contrast": 2,
          "name": "red200",
          "value": "#4a4d44",
        },
        {
          "contrast": 3,
          "name": "red300",
          "value": "#64675e",
        },
        {
          "contrast": 4,
          "name": "red400",
          "value": "#777b72",
        },
        {
          "contrast": 5,
          "name": "red500",
          "value": "#868b82",
        },
        {
          "contrast": 6,
          "name": "red600",
          "value": "#959a90",
        },
        {
          "contrast": 7,
          "name": "red700",
          "value": "#a1a69c",
        },
        {
          "contrast": 8,
          "name": "red800",
          "value": "#acb2a8",
        },
        {
          "contrast": 9,
          "name": "red900",
          "value": "#b7bdb3",
        },
      ],
    },
    {
      "name": "green",
      "values": [
        {
          "contrast": 1,
          "name": "green100",
          "value": "#1b1c11",
        },
        {
          "contrast": 2,
          "name": "green200",
          "value": "#4c4d3a",
        },
        {
          "contrast": 3,
          "name": "green300",
          "value": "#666754",
        },
        {
          "contrast": 4,
          "name": "green400",
          "value": "#7a7b69",
        },
        {
          "contrast": 5,
          "name": "green500",
          "value": "#8b8b7c",
        },
        {
          "contrast": 6,
          "name": "green600",
          "value": "#99998b",
        },
        {
          "contrast": 7,
          "name": "green700",
          "value": "#a5a69a",
        },
        {
          "contrast": 8,
          "name": "green800",
          "value": "#b1b1a7",
        },
        {
          "contrast": 9,
          "name": "green900",
          "value": "#bbbcb2",
        },
      ],
    },
    {
      "name": "yellow",
      "values": [
        {
          "contrast": 1,
          "name": "yellow100",
          "value": "#340e12",
        },
        {
          "contrast": 2,
          "name": "yellow200",
          "value": "#8c2630",
        },
        {
          "contrast": 3,
          "name": "yellow300",
          "value": "#bb3341",
        },
        {
          "contrast": 4,
          "name": "yellow400",
          "value": "#b95e63",
        },
        {
          "contrast": 5,
          "name": "yellow500",
          "value": "#b17d79",
        },
        {
          "contrast": 6,
          "name": "yellow600",
          "value": "#ac938a",
        },
        {
          "contrast": 7,
          "name": "yellow700",
          "value": "#a7a698",
        },
        {
          "contrast": 8,
          "name": "yellow800",
          "value": "#a4b5a4",
        },
        {
          "contrast": 9,
          "name": "yellow900",
          "value": "#b0bfb0",
        },
      ],
    },
    {
      "name": "blue",
      "values": [
        {
          "contrast": 1,
          "name": "blue100",
          "value": "#380c0f",
        },
        {
          "contrast": 2,
          "name": "blue200",
          "value": "#7e352d",
        },
        {
          "contrast": 3,
          "name": "blue300",
          "value": "#766249",
        },
        {
          "contrast": 4,
          "name": "blue400",
          "value": "#887761",
        },
        {
          "contrast": 5,
          "name": "blue500",
          "value": "#978874",
        },
        {
          "contrast": 6,
          "name": "blue600",
          "value": "#a49685",
        },
        {
          "contrast": 7,
          "name": "blue700",
          "value": "#afa395",
        },
        {
          "contrast": 8,
          "name": "blue800",
          "value": "#b9afa2",
        },
        {
          "contrast": 9,
          "name": "blue900",
          "value": "#c2baae",
        },
      ],
    },
    {
      "name": "magenta",
      "values": [
        {
          "contrast": 1,
          "name": "magenta100",
          "value": "#201b0c",
        },
        {
          "contrast": 2,
          "name": "magenta200",
          "value": "#4a4d43",
        },
        {
          "contrast": 3,
          "name": "magenta300",
          "value": "#606861",
        },
        {
          "contrast": 4,
          "name": "magenta400",
          "value": "#717c78",
        },
        {
          "contrast": 5,
          "name": "magenta500",
          "value": "#7f8d8a",
        },
        {
          "contrast": 6,
          "name": "magenta600",
          "value": "#8c9b9b",
        },
        {
          "contrast": 7,
          "name": "magenta700",
          "value": "#99a8a8",
        },
        {
          "contrast": 8,
          "name": "magenta800",
          "value": "#a6b3b3",
        },
        {
          "contrast": 9,
          "name": "magenta900",
          "value": "#b3bdbd",
        },
      ],
    },
    {
      "name": "cyan",
      "values": [
        {
          "contrast": 1,
          "name": "cyan100",
          "value": "#271909",
        },
        {
          "contrast": 2,
          "name": "cyan200",
          "value": "#4c4d3a",
        },
        {
          "contrast": 3,
          "name": "cyan300",
          "value": "#666756",
        },
        {
          "contrast": 4,
          "name": "cyan400",
          "value": "#797b6c",
        },
        {
          "contrast": 5,
          "name": "cyan500",
          "value": "#8a8b7e",
        },
        {
          "contrast": 6,
          "name": "cyan600",
          "value": "#98998e",
        },
        {
          "contrast": 7,
          "name": "cyan700",
          "value": "#a4a59b",
        },
        {
          "contrast": 8,
          "name": "cyan800",
          "value": "#b1b1a9",
        },
        {
          "contrast": 9,
          "name": "cyan900",
          "value": "#bbbbb4",
        },
      ],
    },
  ],
  "terminal": [
    "#1b1b16",
    "#4a4d44",
    "#4c4d3a",
    "#8c2630",
    "#7e352d",
    "#4a4d43",
    "#4c4d3a",
    "#646761",
    "#524b41",
    "#959a90",
    "#99998b",
    "#ac938a",
    "#a49685",
    "#8c9b9b",
    "#98998e",
    "#c9868b",
  ],
}
`;
